--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -6,11 +6,12 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.19.4",
+    "pg": "^8.11.3"
   }
 }
