--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@mui/base": "^5.0.0-beta.16",
+    "@mui/material": "^5.14.10",
     "axios": "^0.18.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -24,5 +27,10 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0"
+  }
 }
