--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.3.1",
     "express": "^4.16.4",
     "nodemon": "^1.19.4",
     "pg": "^8.11.3"
