--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -12,7 +12,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^16.3.1",
     "express": "^4.16.4",
-    "nodemon": "^1.19.4"
-  },
-  "pg": "^8.11.3"
+    "nodemon": "^1.19.4",
+    "pg": "^8.11.3"
+  }
 }
