--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon server.js",
-    "build": "echo 'No build for beckend'"
+    "build": "echo 'No build for backend'"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
