--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -27,7 +27,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "https://sports-app-api-28.onrender.com",
+  "proxy": "http://localhost:8080",
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
